fixed app - works again

--- a/GpsTracker.App/app/build.gradle
+++ b/GpsTracker.App/app/build.gradle
@@ -18,6 +18,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
@@ -29,5 +30,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.android.gms:play-services-maps:10.2.6'
     compile 'com.google.android.gms:play-services-location:10.2.6'
+    compile 'com.android.support:appcompat-v7:22.2.0'
     testCompile 'junit:junit:4.12'
 }
