--- a/GpsTracker.Service/GpsTrackerService/GpsTracker.Model.Test/GpsTracker.Model.Test.csproj
+++ b/GpsTracker.Service/GpsTrackerService/GpsTracker.Model.Test/GpsTracker.Model.Test.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EventTest.cs" />
