--- a/GpsTracker.Service/GpsTrackerService/GpsTracker.Service/Web.config
+++ b/GpsTracker.Service/GpsTrackerService/GpsTracker.Service/Web.config
@@ -36,4 +36,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="GpsTrackingDatabaseEntities" connectionString="metadata=res://*/DataContext.GpsTrackerDbModel.csdl|res://*/DataContext.GpsTrackerDbModel.ssdl|res://*/DataContext.GpsTrackerDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-52EP808;initial catalog=GpsTrackingDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
