--- a/GpsTracker.Service/GpsTrackerService/GpsTracker.Service/GpsTracker.Service.csproj
+++ b/GpsTracker.Service/GpsTrackerService/GpsTracker.Service/GpsTracker.Service.csproj
@@ -89,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\GpsTrackerService - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
