--- a/GpsTracker.App/app/src/main/AndroidManifest.xml
+++ b/GpsTracker.App/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_maps"
             android:exported="true"
             android:launchMode="singleTask"
