--- a/GpsTracker.Service/GpsTrackerService/GpsTracker.Model.Test/packages.config
+++ b/GpsTracker.Service/GpsTrackerService/GpsTracker.Model.Test/packages.config
@@ -3,4 +3,5 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="MSTest.TestAdapter" version="1.1.17" targetFramework="net452" />
   <package id="MSTest.TestFramework" version="1.1.17" targetFramework="net452" />
+  <package id="StyleCop.MSBuild" version="4.7.55.0" targetFramework="net452" developmentDependency="true" />
 </packages>
