--- a/GpsTracker.Service/GpsTrackerService/GpsTracker.Model.Test/GpsTracker.Model.Test.csproj
+++ b/GpsTracker.Service/GpsTrackerService/GpsTracker.Model.Test/GpsTracker.Model.Test.csproj
@@ -64,11 +64,10 @@
     <Compile Include="PersonTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LogTest.cs" />
-    <Compile Include="TrackTest.cs" />
     <Compile Include="UserTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.Config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
