--- a/GpsTracker.Service/GpsTrackerService/GpsTracker.Models/GpsTracker.Models.csproj
+++ b/GpsTracker.Service/GpsTrackerService/GpsTracker.Models/GpsTracker.Models.csproj
@@ -59,41 +59,41 @@
     <Compile Include="DataContext\Contexts\PersonContext.cs" />
     <Compile Include="DataContext\Contexts\UserContext.cs" />
     <Compile Include="DataContext\Event.cs">
-      <DependentUpon>GpsTrackerDbContext.tt</DependentUpon>
+      <DependentUpon>GpsTrackerDbModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="DataContext\GpsTrackerDbContext.Context.cs">
+    <Compile Include="DataContext\GpsTrackerDbModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>GpsTrackerDbContext.Context.tt</DependentUpon>
+      <DependentUpon>GpsTrackerDbModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="DataContext\GpsTrackerDbContext.cs">
+    <Compile Include="DataContext\GpsTrackerDbModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>GpsTrackerDbContext.tt</DependentUpon>
+      <DependentUpon>GpsTrackerDbModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="DataContext\GpsTrackerDbContext.Designer.cs">
+    <Compile Include="DataContext\GpsTrackerDbModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>GpsTrackerDbContext.edmx</DependentUpon>
+      <DependentUpon>GpsTrackerDbModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="DataContext\Interfaces\IDbContext.cs" />
     <Compile Include="DataContext\Interfaces\IMainDbContext.cs" />
     <Compile Include="DataContext\Log.cs">
-      <DependentUpon>GpsTrackerDbContext.tt</DependentUpon>
+      <DependentUpon>GpsTrackerDbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="DataContext\Marker.cs">
-      <DependentUpon>GpsTrackerDbContext.tt</DependentUpon>
+      <DependentUpon>GpsTrackerDbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="DataContext\Person.cs">
-      <DependentUpon>GpsTrackerDbContext.tt</DependentUpon>
+      <DependentUpon>GpsTrackerDbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="DataContext\User.cs">
-      <DependentUpon>GpsTrackerDbContext.tt</DependentUpon>
+      <DependentUpon>GpsTrackerDbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Mappers\FromDb.cs" />
     <Compile Include="Mappers\IntoDb.cs" />
     <Compile Include="Messages\CheckMessage.cs" />
-    <Compile Include="Messages\RegistrationMessage.cs" />
+    <Compile Include="Messages\LoginMessage.cs" />
     <Compile Include="Messages\ResultMessage.cs" />
     <Compile Include="Messages\SosMessage.cs" />
     <Compile Include="Models\Event.cs" />
@@ -108,26 +108,26 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <EntityDeploy Include="DataContext\GpsTrackerDbContext.edmx">
+    <EntityDeploy Include="DataContext\GpsTrackerDbModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>GpsTrackerDbContext.Designer.cs</LastGenOutput>
+      <LastGenOutput>GpsTrackerDbModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
     <None Include="App.Config" />
-    <None Include="DataContext\GpsTrackerDbContext.edmx.diagram">
-      <DependentUpon>GpsTrackerDbContext.edmx</DependentUpon>
+    <None Include="DataContext\GpsTrackerDbModel.edmx.diagram">
+      <DependentUpon>GpsTrackerDbModel.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="DataContext\GpsTrackerDbContext.Context.tt">
+    <Content Include="DataContext\GpsTrackerDbModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>GpsTrackerDbContext.edmx</DependentUpon>
-      <LastGenOutput>GpsTrackerDbContext.Context.cs</LastGenOutput>
+      <DependentUpon>GpsTrackerDbModel.edmx</DependentUpon>
+      <LastGenOutput>GpsTrackerDbModel.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="DataContext\GpsTrackerDbContext.tt">
+    <Content Include="DataContext\GpsTrackerDbModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>GpsTrackerDbContext.edmx</DependentUpon>
-      <LastGenOutput>GpsTrackerDbContext.cs</LastGenOutput>
+      <DependentUpon>GpsTrackerDbModel.edmx</DependentUpon>
+      <LastGenOutput>GpsTrackerDbModel.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
