--- a/GpsTracker.Service/GpsTrackerService/GpsTracker.Service/GpsTracker.Service.csproj
+++ b/GpsTracker.Service/GpsTrackerService/GpsTracker.Service/GpsTracker.Service.csproj
@@ -105,6 +105,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\App\AppController.cs" />
     <Compile Include="Controllers\StaticInfo.cs" />
+    <Compile Include="Controllers\WebSite\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
