--- a/GpsTracker.Service/GpsTrackerService/GpsTracker.Service/GpsTracker.Service.csproj
+++ b/GpsTracker.Service/GpsTrackerService/GpsTracker.Service/GpsTracker.Service.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
+    <Reference Include="System.Runtime" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -105,6 +106,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\App\AppController.cs" />
     <Compile Include="Controllers\StaticInfo.cs" />
+    <Compile Include="Controllers\WebSite\MainPageController.cs" />
     <Compile Include="Controllers\WebSite\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
