--- a/GpsTracker.Service/GpsTrackerService/GpsTracker.Service/GpsTracker.Service.csproj
+++ b/GpsTracker.Service/GpsTrackerService/GpsTracker.Service/GpsTracker.Service.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Controllers\App\AppController.cs" />
     <Compile Include="Controllers\StaticInfo.cs" />
     <Compile Include="Controllers\WebSite\MainPageController.cs" />
+    <Compile Include="Controllers\WebSite\MarkerController.cs" />
     <Compile Include="Controllers\WebSite\PersonController.cs" />
     <Compile Include="Controllers\WebSite\UserController.cs" />
     <Compile Include="Global.asax.cs">
