--- a/GpsTracker.App/app/build.gradle
+++ b/GpsTracker.App/app/build.gradle
@@ -33,5 +33,13 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:10.2.6'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.2.6'
+    compile 'com.google.android.gms:play-services-auth:10.2.6'
     testCompile 'junit:junit:4.12'
 }
+
+
+
+
+apply plugin: 'com.google.gms.google-services'
