--- a/GpsTracker.Service/GpsTrackerService/GpsTracker.Models/GpsTracker.Models.csproj
+++ b/GpsTracker.Service/GpsTrackerService/GpsTracker.Models/GpsTracker.Models.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Mappers\FromDb.cs" />
     <Compile Include="Mappers\IntoDb.cs" />
     <Compile Include="Messages\CheckMessage.cs" />
+    <Compile Include="Messages\FriendsMessage.cs" />
     <Compile Include="Messages\LoginMessage.cs" />
     <Compile Include="Messages\ResultMessage.cs" />
     <Compile Include="Messages\SearchMessage.cs" />
