--- a/GpsTracker.Service/GpsTrackerService/GpsTracker.Models/GpsTracker.Models.csproj
+++ b/GpsTracker.Service/GpsTrackerService/GpsTracker.Models/GpsTracker.Models.csproj
@@ -61,6 +61,7 @@
     <Compile Include="DataContext\Contexts\BaseContext.cs" />
     <Compile Include="DataContext\Contexts\EventContext.cs" />
     <Compile Include="DataContext\Contexts\FriendlistContext.cs" />
+    <Compile Include="DataContext\Contexts\HistoryMessage.cs" />
     <Compile Include="DataContext\Contexts\LogContext.cs" />
     <Compile Include="DataContext\Contexts\MainContext.cs" />
     <Compile Include="DataContext\Contexts\MarkerContext.cs" />
