--- a/GpsTracker.App/gradle/wrapper/gradle-wrapper.properties
+++ b/GpsTracker.App/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon May 22 13:05:00 EEST 2017
+#Sun Apr 01 16:05:49 GMT+02:00 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.4-all.zip
