--- a/GpsTracker.App/app/build.gradle
+++ b/GpsTracker.App/app/build.gradle
@@ -1,8 +1,13 @@
 apply plugin: 'com.android.application'
 
+
 android {
+    signingConfigs {
+        config {
+        }
+    }
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.kamanda.timon.gpstracker"
         minSdkVersion 16
@@ -23,23 +28,21 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-v4:25.2.0'
+    implementation 'com.google.android.gms:play-services-plus:15.0.1'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.android.gms:play-services-maps:10.2.6'
-    compile 'com.google.android.gms:play-services-location:10.2.6'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:support-vector-drawable:25.3.1'
-    compile 'com.google.firebase:firebase-core:10.0.1'
-    compile 'com.google.firebase:firebase-auth:10.2.6'
-    compile 'com.google.android.gms:play-services-auth:10.2.6'
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.google.android.gms:play-services-maps:15.0.1'
+    compile 'com.google.android.gms:play-services-location:15.0.1'
+    compile 'com.android.support:design:25.2.0'
+
+    compile('com.mikepenz.materialdrawer:library:0.9.5@aar') {
+        transitive = true
+    }
     testCompile 'junit:junit:4.12'
 }
-
-
-
-
-apply plugin: 'com.google.gms.google-services'
