--- a/GpsTracker.App/app/src/main/AndroidManifest.xml
+++ b/GpsTracker.App/app/src/main/AndroidManifest.xml
@@ -63,7 +63,6 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".GoogleSignInActivity" />
 
         <service
             android:name=".geofence.GeofencingService"
@@ -72,7 +71,7 @@
         <service
             android:name=".geofence.ReceiveTransitionsIntentService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
     </application>
 
 </manifest>
